make application 2 steps finished

--- a/dashboard-advisor.html
+++ b/dashboard-advisor.html
@@ -212,7 +212,7 @@
 									<td><span>AU$</span>1.00</td>
 									<td><span>AU$</span>20.00</td>
 									<td>Submit application</td>
-									<td><a href="#" class="pdf-button"><i class="mdi mdi-file-pdf"></i></a><a href="#" class="pay-apply-button">Apply now</a></td>
+									<td><a href="#" class="pdf-button"><i class="mdi mdi-file-pdf"></i></a><a href="dashboard-investment-profile-make-applicaion-step1.html" class="pay-apply-button">Apply now</a></td>
 									<td class="text-center text-nowrap">
 										<a href="#" class="control-buttons edit"><i class="mdi mdi-pencil"></i></a>
 										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
