--- a/dashboard-investment-profile-make-applicaion-step1.html
+++ b/dashboard-investment-profile-make-applicaion-step1.html
@@ -140,41 +140,43 @@
 				<div class="dashboard-wrapper">
 					<div class="dashboard-top-heading d-lg-flex justify-content-between align-items-center">
 						<div class="heading">
-							<h2>INVESTMENT PROFILE</h2>
+							<a href="dashboard-advisor.html" class="back-button">
+								<i class="mdi mdi-arrow-left"></i>
+								Make applicaion
+							</a>
 						</div>
 					</div>
-					<div class="dashboard-investment-row">
-						<div class="dashboard-investment-profile profile-details-row row justify-content-between">
-							<div class="col-md-5">
-								<div class="select-iprofile">
-									<span class="invest-title" style="margin-bottom: 25px;">SELECT INVESTMENT PROFILE</span>
-									<select>
-										<option value="">Individual</option>
-										<option value="">Company</option>
-										<option value="">Trust</option>
-										<option value="">Self managed Superannuation Fund Trustee</option>
-									</select>
+					<div class="make-app-top">
+						<div class="row">
+							<div class="col-lg-2">
+								<div class="offer-title offer-title-top">
+									<span class="dark-color">KLEOS <br>Space</span>
 								</div>
 							</div>
-							<div class="col-md-3">
-								<div class="investment-details">
-									<div class="investment-details-row d-flex align-items-center justify-content-between">
-										<span class="font-weight-bold">Investment Profile Status</span>
-										<mark>Active</mark>
-									</div>
-									<div class="investment-details-row d-flex align-items-center justify-content-between">
-										<span>Profile details</span>
-										<mark>Complete</mark>
-									</div>
-									<div class="investment-details-row d-flex align-items-center justify-content-between">
-										<span>ID verification</span>
-										<mark>Complete</mark>
-									</div>
-									<div class="investment-details-row d-flex align-items-center justify-content-between">
-										<span>Wholesale Investor</span>
-										<mark>Yes</mark>
+							<div class="col-lg-4">
+								<div class="make-app-text">
+									<span>Open</span>
+									<p>Kleos is offering a remarkable shift in global geo-located intelligence gathering capability from Space.</p>
+								</div>
+							</div>
+							<div class="col-lg-1"></div>
+							<div class="col-lg-3">
+								<div class="investment-board-right">
+									<span class="status status-closes">Closes: <em>Sat 30 MARCH 2018</em></span>
+									<div class="date d-flex">
+										<div class="date-col">
+											<mark>10</mark>
+											<i>Days</i>
+										</div>
+										<div class="date-col">
+											<mark>09</mark>
+											<i>Hours</i>
+										</div>
 									</div>
 								</div>
+							</div>
+							<div class="col-md-2 text-right">
+								<span class="closing-soon">CLOSING SOON</span>
 							</div>
 						</div>
 					</div>
@@ -191,16 +193,16 @@
 											<i class="mdi mdi-check"></i>
 										</div>
 									</div>
-									<span>profile details</span>
+									<span>Terms & Conditions</span>
 								</a>
-								<a href="#" class="step-col ">
+								<a href="#" class="step-col">
 									<div class="circle-wrapper">
 										<div class="circle">
 											<em>2</em>
 											<i class="mdi mdi-check"></i>
 										</div>
 									</div>
-									<span>id verification</span>
+									<span>Investment profile</span>
 								</a>
 								<a href="#" class="step-col">
 									<div class="circle-wrapper">
@@ -209,155 +211,91 @@
 											<i class="mdi mdi-check"></i>
 										</div>
 									</div>
-									<span>wholesale investor</span>
+									<span>SOPISTICATED & PROFESSIONAL INVESTORS</span>
+								</a>
+								<a href="#" class="step-col">
+									<div class="circle-wrapper">
+										<div class="circle">
+											<em>3</em>
+											<i class="mdi mdi-check"></i>
+										</div>
+									</div>
+									<span>APPLICATION AMOUNT</span>
+								</a>
+								<a href="#" class="step-col">
+									<div class="circle-wrapper">
+										<div class="circle">
+											<em>3</em>
+											<i class="mdi mdi-check"></i>
+										</div>
+									</div>
+									<span>SUBMIT APPLICATION</span>
 								</a>
 							</div>
 						</div>
 					</div>
-					<div class="dashboard-investment-row">
-						<span class="invest-title">Details</span>
-						<div class="row profile-details-row">
-							<div class="col-lg-3 correct">
-								<label for="lbl5">Type</label>
-								<select id="lbl5">
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-								</select>
-							</div>
-							<div class="col-lg-3">
-								<label for="lbl15">Title</label>
-								<select id="lbl15">
-									<option value="">Title</option>
-									<option value="">Title</option>
-									<option value="">Title</option>
-									<option value="">Title</option>
-								</select>
-							</div>
-							<div class="col-lg-3 error">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl6">
-									<label for="lbl6">*Given Name</label>
+					<div class="make-app-steps">
+						<span class="step-title">STEP 1. TERMS & CONDITIONS</span>
+						<div class="make-app-hint text-center">
+							<p>Please complete the steps below before completing the application form</p>
+						</div>
+						<div class="terms-container">
+							<div class="terms-wrapper">
+								<div class="terms-row d-flex justify-content-between align-items-center">
+									<p>1. Only text here*</p>
+									<div class="checkbox-container d-flex justify-content-between align-items-center">
+										<div class="checkbox">
+											<input id="check1" type="checkbox">
+											<label for="check1" class="d-flex">
+												<span><i class="mdi mdi-check"></i></span>
+											</label>
+										</div>
+									</div>
 								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl8">
-									<label for="lbl8">Middle name</label>
+								<div class="terms-row d-flex justify-content-between align-items-center error">
+									<p>2. Required to view pdf</p>
+									<div class="checkbox-container d-flex justify-content-between align-items-center">
+										<div class="checkbox">
+											<input id="check2" type="checkbox">
+											<label for="check2" class="d-flex">
+												<span><i class="mdi mdi-check"></i></span>
+											</label>
+										</div>
+										<i class="mdi mdi-eye-outline"></i>
+									</div>
+								</div>
+								<div class="terms-row d-flex justify-content-between align-items-center">
+									<p>3. <span>Required to dowload pdf</span></p>
+									<div class="checkbox-container d-flex justify-content-between align-items-center">
+										<div class="checkbox">
+											<input id="check3" type="checkbox">
+											<label for="check3" class="d-flex">
+												<span><i class="mdi mdi-check"></i></span>
+											</label>
+										</div>
+										<i class="mdi mdi-file-pdf"></i>
+									</div>
+								</div>
+								<div class="terms-row d-flex justify-content-between align-items-center">
+									<p>4. <span>Required to visit the link</span></p>
+									<div class="checkbox-container d-flex justify-content-between align-items-center">
+										<div class="checkbox">
+											<input id="check4" type="checkbox">
+											<label for="check4" class="d-flex">
+												<span><i class="mdi mdi-check"></i></span>
+											</label>
+										</div>
+										<i class="mdi mdi-link"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="row profile-details-row">
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl9">
-									<label for="lbl9">Surname</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<label for="lbl10">Applicant Number Type</label>
-								<select id="lbl10">
-									<option value="">Applicant Number Type</option>
-									<option value="">Applicant Number Type</option>
-									<option value="">Applicant Number Type</option>
-									<option value="">Applicant Number Type</option>
-								</select>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="number" id="lbl11">
-									<label for="lbl11">Number</label>
-								</div>
-							</div>
+						<div class="make-app-hint text-center bg-none nomargin">
+							<p>BY CLICKING THE "SUBMIT" BUTTON YOU AGREE THAT YOU HAVE COMPLETED THE STEPS ABOVE</p>
 						</div>
-					</div>
-					<div class="dashboard-investment-row">
-						<span class="invest-title">POSTAL ADDRESS</span>
-						<div class="row profile-details-row">
-							<div class="col-lg-3">
-								<label for="lbl12">*Country</label>
-								<select id="lbl12">
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-								</select>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl13">
-									<label for="lbl13">*Street Number & Name</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl14">
-									<label for="lbl14">*Suburb, City or Town</label>
-								</div>
-							</div>
-						</div>
-						<div class="row profile-details-row">
-							<div class="col-lg-3">
-								<label for="lbl16">*State</label>
-								<select id="lbl16">
-									<option value="">State</option>
-									<option value="">State</option>
-									<option value="">State</option>
-									<option value="">State</option>
-								</select>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="number" id="lbl17">
-									<label for="lbl17">*Postcode</label>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="dashboard-investment-row">
-						<span class="invest-title">CHESS HIN OR EXISTING SRN</span>
-						<p class="profile-text">CHESS HIN or SRN (if you want to add this holding to a specific CHESS holder, write the number here) (optional)</p>
-						<div class="row profile-details-row" style="margin-top: 30px;">
-							<div class="col-lg-6">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl18">
-								</div>
-							</div>
-							<div class="col-lg-5">
-								<p class="note-text">Please note: if you supply a CHESS HIN but the name and address details on this Application Form do not correspond exactly with the registration details held at CHESS, your Application will be deemed to be made without the CHESS HIN and any Shares issued as a result of the Offer will be held on the issuer sponsored sub-register</p>
-							</div>
-						</div>
-					</div>
-					<div class="dashboard-investment-row">
-						<span class="invest-title">POSTAL ADDRESS</span>
-						<div class="row profile-details-row">
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl19">
-									<label for="lbl19">*Contact Person</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="email" id="lbl20">
-									<label for="lbl20">*Email</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="tel" id="lbl21">
-									<label for="lbl21">Phone</label>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="dashboard-investment-row">
 						<div class="row profile-details-row justify-content-center">
 							<div class="col-lg-3">
-								<div class="button-wrapper" style="margin: 0;">
-									<a href="dashboard-investment-profile-individual-step2.html" class="btn-repeat dashboard-btn fullwidth">Next</a>
-								</div>
+								<a href="dashboard-investment-profile-make-applicaion-step2.html" class="btn-repeat dashboard-btn fullwidth nomargin">Next</a>
 							</div>
 						</div>
 					</div>
