MA all steps finished

--- a/dashboard-investment-profile-make-applicaion-step2.html
+++ b/dashboard-investment-profile-make-applicaion-step2.html
@@ -186,7 +186,7 @@
 								<div class="progress-line" style="width: 25%;"></div>
 							</div>
 							<div class="d-flex align-items-center justify-content-between">
-								<a href="#" class="step-col completed">
+								<a href="dashboard-investment-profile-make-applicaion-step1.html" class="step-col completed">
 									<div class="circle-wrapper">
 										<div class="circle">
 											<em>1</em>
@@ -195,7 +195,7 @@
 									</div>
 									<span>Terms & Conditions</span>
 								</a>
-								<a href="#" class="step-col active">
+								<a href="dashboard-investment-profile-make-applicaion-step2.html" class="step-col active">
 									<div class="circle-wrapper">
 										<div class="circle">
 											<em>2</em>
@@ -204,7 +204,7 @@
 									</div>
 									<span>Investment profile</span>
 								</a>
-								<a href="#" class="step-col">
+								<a href="dashboard-investment-profile-make-applicaion-step3.html" class="step-col">
 									<div class="circle-wrapper">
 										<div class="circle">
 											<em>3</em>
@@ -213,19 +213,19 @@
 									</div>
 									<span>SOPISTICATED & PROFESSIONAL INVESTORS</span>
 								</a>
-								<a href="#" class="step-col">
+								<a href="dashboard-investment-profile-make-applicaion-step4.html" class="step-col">
 									<div class="circle-wrapper">
 										<div class="circle">
-											<em>3</em>
+											<em>4</em>
 											<i class="mdi mdi-check"></i>
 										</div>
 									</div>
 									<span>APPLICATION AMOUNT</span>
 								</a>
-								<a href="#" class="step-col">
+								<a href="dashboard-investment-profile-make-applicaion-step5.html" class="step-col">
 									<div class="circle-wrapper">
 										<div class="circle">
-											<em>3</em>
+											<em>5</em>
 											<i class="mdi mdi-check"></i>
 										</div>
 									</div>
@@ -414,7 +414,7 @@
 						</div>
 						<div class="row profile-details-row justify-content-center">
 							<div class="col-lg-3">
-								<a href="#" class="btn-repeat dashboard-btn fullwidth nomargin">Next</a>
+								<a href="dashboard-investment-profile-make-applicaion-step3.html" class="btn-repeat dashboard-btn fullwidth nomargin">Next</a>
 							</div>
 						</div>
 					</div>
