--- a/dashboard-investment-profile-make-applicaion-step5.html
+++ b/dashboard-investment-profile-make-applicaion-step5.html
@@ -183,10 +183,10 @@
 					<div class="dashboard-steps-wrapper">
 						<div class="dashboard-investment-steps">
 							<div class="progress-wrapper">
-								<div class="progress-line" style="width: 0;"></div>
+								<div class="progress-line" style="width: 75%;"></div>
 							</div>
 							<div class="d-flex align-items-center justify-content-between">
-								<a href="dashboard-investment-profile-make-applicaion-step1.html" class="step-col active">
+								<a href="dashboard-investment-profile-make-applicaion-step1.html" class="step-col completed">
 									<div class="circle-wrapper">
 										<div class="circle">
 											<em>1</em>
@@ -195,7 +195,7 @@
 									</div>
 									<span>Terms & Conditions</span>
 								</a>
-								<a href="dashboard-investment-profile-make-applicaion-step2.html" class="step-col">
+								<a href="dashboard-investment-profile-make-applicaion-step2.html" class="step-col completed">
 									<div class="circle-wrapper">
 										<div class="circle">
 											<em>2</em>
@@ -204,7 +204,7 @@
 									</div>
 									<span>Investment profile</span>
 								</a>
-								<a href="dashboard-investment-profile-make-applicaion-step3.html" class="step-col">
+								<a href="dashboard-investment-profile-make-applicaion-step3.html" class="step-col completed">
 									<div class="circle-wrapper">
 										<div class="circle">
 											<em>3</em>
@@ -213,7 +213,7 @@
 									</div>
 									<span>SOPISTICATED & PROFESSIONAL INVESTORS</span>
 								</a>
-								<a href="dashboard-investment-profile-make-applicaion-step4.html" class="step-col">
+								<a href="dashboard-investment-profile-make-applicaion-step4.html" class="step-col completed">
 									<div class="circle-wrapper">
 										<div class="circle">
 											<em>4</em>
@@ -222,7 +222,7 @@
 									</div>
 									<span>APPLICATION AMOUNT</span>
 								</a>
-								<a href="dashboard-investment-profile-make-applicaion-step5.html" class="step-col">
+								<a href="dashboard-investment-profile-make-applicaion-step5.html" class="step-col active">
 									<div class="circle-wrapper">
 										<div class="circle">
 											<em>5</em>
@@ -235,67 +235,11 @@
 						</div>
 					</div>
 					<div class="make-app-steps">
-						<span class="step-title">STEP 1. TERMS & CONDITIONS</span>
-						<div class="make-app-hint text-center">
-							<p>Please complete the steps below before completing the application form</p>
-						</div>
-						<div class="terms-container">
-							<div class="terms-wrapper">
-								<div class="terms-row d-flex justify-content-between align-items-center">
-									<p>1. Only text here*</p>
-									<div class="checkbox-container d-flex justify-content-between align-items-center">
-										<div class="checkbox">
-											<input id="check1" type="checkbox">
-											<label for="check1" class="d-flex">
-												<span><i class="mdi mdi-check"></i></span>
-											</label>
-										</div>
-									</div>
-								</div>
-								<div class="terms-row d-flex justify-content-between align-items-center error">
-									<p>2. Required to view pdf</p>
-									<div class="checkbox-container d-flex justify-content-between align-items-center">
-										<div class="checkbox">
-											<input id="check2" type="checkbox">
-											<label for="check2" class="d-flex">
-												<span><i class="mdi mdi-check"></i></span>
-											</label>
-										</div>
-										<i class="mdi mdi-eye-outline"></i>
-									</div>
-								</div>
-								<div class="terms-row d-flex justify-content-between align-items-center">
-									<p>3. <span>Required to dowload pdf</span></p>
-									<div class="checkbox-container d-flex justify-content-between align-items-center">
-										<div class="checkbox">
-											<input id="check3" type="checkbox">
-											<label for="check3" class="d-flex">
-												<span><i class="mdi mdi-check"></i></span>
-											</label>
-										</div>
-										<i class="mdi mdi-file-pdf"></i>
-									</div>
-								</div>
-								<div class="terms-row d-flex justify-content-between align-items-center">
-									<p>4. <span>Required to visit the link</span></p>
-									<div class="checkbox-container d-flex justify-content-between align-items-center">
-										<div class="checkbox">
-											<input id="check4" type="checkbox">
-											<label for="check4" class="d-flex">
-												<span><i class="mdi mdi-check"></i></span>
-											</label>
-										</div>
-										<i class="mdi mdi-link"></i>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="make-app-hint text-center bg-none nomargin">
-							<p>BY CLICKING THE "SUBMIT" BUTTON YOU AGREE THAT YOU HAVE COMPLETED THE STEPS ABOVE</p>
-						</div>
+						<span class="step-title">STEP 5. SUBMIT APPLICATION</span>
+						<p class="profile-text" style="margin-bottom: 30px;">You will need to pay a processing fee of $24.20 on the next screen. Visa Mastercard etc</p>
 						<div class="row profile-details-row justify-content-center">
 							<div class="col-lg-3">
-								<a href="dashboard-investment-profile-make-applicaion-step2.html" class="btn-repeat dashboard-btn fullwidth nomargin">Next</a>
+								<a href="dashboard-investment-profile-make-applicaion-submit.html" class="btn-repeat dashboard-btn fullwidth nomargin">Submit</a>
 							</div>
 						</div>
 					</div>
