CK editor styles

--- a/offer.html
+++ b/offer.html
@@ -13,6 +13,7 @@
 		<link media="all" rel="stylesheet" href="css/fontawesome-all.min.css" type="text/css" />
 		<link media="all" rel="stylesheet" href="css/slick.css" type="text/css" />
 		<link media="all" rel="stylesheet" href="css/offer.css" type="text/css" />
+		<link media="all" rel="stylesheet" href="css/ck-editor.css" type="text/css" />
 
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700,900" rel="stylesheet">
@@ -171,6 +172,121 @@
 									<p>Kleos Space will deploy Space based technology and assets that can locate and track any device transmitting radio frequencies, enabling the provision of global monitoring and tracking. This intelligence will be provided as a DaaS (Data As A Service) to Government Ministries as well as Defense, Border Security and commercial organisations.</p>
 									<p>Kleos has a first mover advantage to penetrate the $26B global Intelligence Surveillance Reconnaisance (ISR) market, and provide the DaaS to NATO countries.</p>
 									<p>Recent investments from the UK Space Agency, European Space Agency, UK Ministry of Defence, and the Luxembourg Government   de-risk and underpin the validity of Kleos , with the Luxembourg Government also expressing an interest in co-investing along side future funding rounds such as the IPO.</p>
+									<div class="ck-editor">
+										<h1>Heading 1</h1>
+										<h5>Heading 5</h5>
+										<h6>Heading 6</h6>
+										<p>Lorem ipsum <i>dolor</i> sit amet, <s>consectetur</s> adipisicing elit. Consectetur esse et ipsa libero molestiae nemo non, officiis omnis praesentium quas quis <u>recusandae</u> saepe sit unde, veniam? <b>Beatae</b> enim rem voluptatum?</p>
+										<a href="#">Lorem link</a>
+										<hr>
+										<h2>Heading 2</h2>
+										<img src="images/hero-bg.jpg" alt="">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab animi aspernatur, aut deserunt dolores esse est fuga itaque maiores neque, non, pariatur quia quibusdam saepe sequi suscipit ullam vel vero.</p>
+										<h3>Heading 3</h3>
+										<ul>
+											<li><mark>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</mark> Nam provident quibusdam velit. Adipisci at consequatur eum explicabo ipsam ipsum iure, minus molestias natus necessitatibus quae quo sequi totam voluptatem voluptatum?</li>
+											<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam provident quibusdam velit. Adipisci at consequatur eum explicabo ipsam ipsum iure, minus molestias natus necessitatibus quae quo sequi totam voluptatem voluptatum?
+												<ul>
+													<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto cum cumque eaque molestiae numquam qui quo, reiciendis sequi? Accusantium ea enim ipsa maxime quaerat quasi, repudiandae vel vero? Suscipit!</li>
+													<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam placeat quibusdam voluptatibus. Aliquam aut, beatae dolorem dolorum eveniet excepturi exercitationem nostrum, optio perferendis porro quis quo reiciendis, sapiente sed vitae!</li>
+													<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci doloribus id illum maiores necessitatibus officiis possimus quia. Accusantium aliquam dignissimos, ipsam iure laborum magni minima praesentium provident quam ratione ut!</li>
+												</ul>
+											</li>
+											<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam provident quibusdam velit. Adipisci at consequatur eum explicabo ipsam ipsum iure, minus molestias natus necessitatibus quae quo sequi totam voluptatem voluptatum?</li>
+											<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam provident quibusdam velit. Adipisci at consequatur eum explicabo ipsam ipsum iure, minus molestias natus necessitatibus quae quo sequi totam voluptatem voluptatum?</li>
+										</ul>
+										<h4>Heading 4</h4>
+										<ol>
+											<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam culpa cupiditate ex explicabo ipsa labore libero magnam maiores mollitia natus odit omnis quaerat quam quibusdam, rem temporibus, tenetur ullam?</li>
+											<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam culpa cupiditate ex explicabo ipsa labore libero magnam maiores mollitia natus odit omnis quaerat quam quibusdam, rem temporibus, tenetur ullam?
+												<ol>
+													<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur delectus dignissimos error nihil nobis perferendis voluptas. Aliquam animi cumque distinctio, dolorum fuga labore magnam magni nisi obcaecati totam vel vitae?</li>
+													<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad alias aliquid asperiores atque debitis dolores fugiat illo ipsam, iusto nihil nobis provident quae quas. Atque esse iure molestiae quae similique?</li>
+												</ol>
+											</li>
+											<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam culpa cupiditate ex explicabo ipsa labore libero magnam maiores mollitia natus odit omnis quaerat quam quibusdam, rem temporibus, tenetur ullam?</li>
+										</ol>
+										<blockquote>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam assumenda, atque aut culpa earum eligendi facere hic, illo illum iusto nobis nostrum numquam qui, quia sint. Aliquam dolor eveniet maxime.</p>
+										</blockquote>
+										<table>
+											<thead>
+											<tr>
+												<th>Title</th>
+												<th>Title</th>
+												<th>Title</th>
+											</tr>
+											</thead>
+											<tbody>
+											<tr>
+												<td>Text</td>
+												<td>Text</td>
+												<td>Text</td>
+											</tr>
+											<tr>
+												<td>Text</td>
+												<td>Text</td>
+												<td>Text</td>
+											</tr>
+											</tbody>
+										</table>
+									</div>
+									<div class="ck-editor list">
+										<p>Lorem ipsum <i>dolor</i> sit amet, <s>consectetur</s> adipisicing elit. Consectetur esse et ipsa libero molestiae nemo non, officiis omnis praesentium quas quis <u>recusandae</u> saepe sit unde, veniam? <b>Beatae</b> enim rem voluptatum?</p>
+										<a href="#">Lorem link</a>
+										<hr>
+										<h2>Heading 2</h2>
+										<img src="images/hero-bg.jpg" alt="">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab animi aspernatur, aut deserunt dolores esse est fuga itaque maiores neque, non, pariatur quia quibusdam saepe sequi suscipit ullam vel vero.</p>
+										<h3>Heading 3</h3>
+										<ul>
+											<li><mark>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</mark> Nam provident quibusdam velit. Adipisci at consequatur eum explicabo ipsam ipsum iure, minus molestias natus necessitatibus quae quo sequi totam voluptatem voluptatum?</li>
+											<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam provident quibusdam velit. Adipisci at consequatur eum explicabo ipsam ipsum iure, minus molestias natus necessitatibus quae quo sequi totam voluptatem voluptatum?
+												<ul>
+													<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto cum cumque eaque molestiae numquam qui quo, reiciendis sequi? Accusantium ea enim ipsa maxime quaerat quasi, repudiandae vel vero? Suscipit!</li>
+													<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam placeat quibusdam voluptatibus. Aliquam aut, beatae dolorem dolorum eveniet excepturi exercitationem nostrum, optio perferendis porro quis quo reiciendis, sapiente sed vitae!</li>
+													<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci doloribus id illum maiores necessitatibus officiis possimus quia. Accusantium aliquam dignissimos, ipsam iure laborum magni minima praesentium provident quam ratione ut!</li>
+												</ul>
+											</li>
+											<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam provident quibusdam velit. Adipisci at consequatur eum explicabo ipsam ipsum iure, minus molestias natus necessitatibus quae quo sequi totam voluptatem voluptatum?</li>
+											<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam provident quibusdam velit. Adipisci at consequatur eum explicabo ipsam ipsum iure, minus molestias natus necessitatibus quae quo sequi totam voluptatem voluptatum?</li>
+										</ul>
+										<h4>Heading 4</h4>
+										<ol>
+											<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam culpa cupiditate ex explicabo ipsa labore libero magnam maiores mollitia natus odit omnis quaerat quam quibusdam, rem temporibus, tenetur ullam?</li>
+											<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam culpa cupiditate ex explicabo ipsa labore libero magnam maiores mollitia natus odit omnis quaerat quam quibusdam, rem temporibus, tenetur ullam?
+												<ol>
+													<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur delectus dignissimos error nihil nobis perferendis voluptas. Aliquam animi cumque distinctio, dolorum fuga labore magnam magni nisi obcaecati totam vel vitae?</li>
+													<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad alias aliquid asperiores atque debitis dolores fugiat illo ipsam, iusto nihil nobis provident quae quas. Atque esse iure molestiae quae similique?</li>
+												</ol>
+											</li>
+											<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam culpa cupiditate ex explicabo ipsa labore libero magnam maiores mollitia natus odit omnis quaerat quam quibusdam, rem temporibus, tenetur ullam?</li>
+										</ol>
+										<blockquote>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam assumenda, atque aut culpa earum eligendi facere hic, illo illum iusto nobis nostrum numquam qui, quia sint. Aliquam dolor eveniet maxime.</p>
+										</blockquote>
+										<table>
+											<thead>
+											<tr>
+												<th>Title</th>
+												<th>Title</th>
+												<th>Title</th>
+											</tr>
+											</thead>
+											<tbody>
+											<tr>
+												<td>Text</td>
+												<td>Text</td>
+												<td>Text</td>
+											</tr>
+											<tr>
+												<td>Text</td>
+												<td>Text</td>
+												<td>Text</td>
+											</tr>
+											</tbody>
+										</table>
+									</div>
 								</div>
 							</div>
 						</div>
